# PhotogrammetryTasks2021

./: .travis.yml  CMakeLists.txt  README.md
.github/: pull_request_template.md
src/phg/sift/: sift.cpp
tests/: test_sift.cpp
